# RayTracerChallenge

./: .gitignore  CMakeLists.txt  LICENSE  README.md  premake5.lua
RayTracer/: CMakeLists.txt  RayTracer.cpp
RayTracerLib/: CMakeLists.txt
RayTracerLib/include/RayTracerLib/: Canvas.h  Color.h  Matrix.h  RayMath.h  Tuple.h
RayTracerLib/src/: Canvas.cpp  Color.cpp  Matrix.cpp  RayMath.cpp  Tuple.cpp
RayTracerTest/: CMakeLists.txt  RaryTracerTest.cpp  RayTracerTest.cpp
